# geany-lsp

./: README.md  configure.ac  meson.build
plugins/: Makefile.am  geanyplugin.h  meson.build
src/: document.c  lsp.c  symbols.c
